// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tusen",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=always, compactDisplay=long 2`] = `"+10 tusen‒+20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=always, compactDisplay=long 3`] = `"+10 tusen‒+20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tn",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=always, compactDisplay=short 2`] = `"+10 tn‒+20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=always, compactDisplay=short 3`] = `"+10 tn‒+20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tusen",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=auto, compactDisplay=long 2`] = `"10 tusen‒20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=auto, compactDisplay=long 3`] = `"10 tusen‒20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tn",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=auto, compactDisplay=short 2`] = `"10 tn‒20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=auto, compactDisplay=short 3`] = `"10 tn‒20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tusen",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10 tusen‒+20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10 tusen‒+20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tn",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10 tn‒+20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10 tn‒+20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tusen",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=never, compactDisplay=long 2`] = `"10 tusen‒20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=never, compactDisplay=long 3`] = `"10 tusen‒20 tusen"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "tn",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=never, compactDisplay=short 2`] = `"10 tn‒20 tn"`;

exports[`Intl.NumberFormat sv > notation=compact, signDisplay=never, compactDisplay=short 3`] = `"10 tn‒20 tn"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=always, compactDisplay=long 2`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=always, compactDisplay=long 3`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=always, compactDisplay=short 2`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=always, compactDisplay=short 3`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=auto, compactDisplay=long 2`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=auto, compactDisplay=long 3`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=auto, compactDisplay=short 2`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=auto, compactDisplay=short 3`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10×10^3‒+20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=never, compactDisplay=long 2`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=never, compactDisplay=long 3`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=never, compactDisplay=short 2`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=engineering, signDisplay=never, compactDisplay=short 3`] = `"10×10^3‒20×10^3"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=always, compactDisplay=long 2`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=always, compactDisplay=long 3`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=always, compactDisplay=short 2`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=always, compactDisplay=short 3`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=auto, compactDisplay=long 2`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=auto, compactDisplay=long 3`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=auto, compactDisplay=short 2`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=auto, compactDisplay=short 3`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=exceptZero, compactDisplay=long 2`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=exceptZero, compactDisplay=long 3`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=exceptZero, compactDisplay=short 2`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=exceptZero, compactDisplay=short 3`] = `"+1×10^4‒+2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=never, compactDisplay=long 2`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=never, compactDisplay=long 3`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "×10^",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=never, compactDisplay=short 2`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=scientific, signDisplay=never, compactDisplay=short 3`] = `"1×10^4‒2×10^4"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=always, compactDisplay=long 2`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=always, compactDisplay=long 3`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=always, compactDisplay=short 2`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=always, compactDisplay=short 3`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=auto, compactDisplay=long 2`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=auto, compactDisplay=long 3`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=auto, compactDisplay=short 2`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=auto, compactDisplay=short 3`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10 000‒+20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=never, compactDisplay=long 2`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=never, compactDisplay=long 3`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": " ",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=never, compactDisplay=short 2`] = `"10 000‒20 000"`;

exports[`Intl.NumberFormat sv > notation=standard, signDisplay=never, compactDisplay=short 3`] = `"10 000‒20 000"`;
